# libsonare

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  README.npm.md  README_ja.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
benchmarks/: CMakeLists.txt  README.md  bench_cpp.cpp  eq_bench.cpp  filterbank_bench.cpp  generate_audio.py  log10_bench.cpp  mastering_isp_bench.cpp  mastering_stereo_bench.cpp  mastering_support_bench.cpp  mixing_bench.cpp  phase_vocoder_streaming_bench.cpp  pyproject.toml  results.json  results_cpp.json  run_bench.py  spectrum_power_bench.cpp  streaming_mel_chroma_bench.cpp  transcendental_bench.cpp
bindings/node/: .gitignore  CMakeLists.txt  README.md  biome.json  package.json  tsconfig.json
bindings/python/: .gitignore  README.md  build_wheel.sh  pyproject.toml
src/: CMakeLists.txt  quick.cpp  quick.h  sonare.h  sonare_c.cpp  sonare_c.h  sonare_c_acoustic.cpp  sonare_c_acoustic.h  sonare_c_compat.cpp  sonare_c_daw.cpp  sonare_c_editing.cpp  sonare_c_effects.cpp  sonare_c_effects.h  sonare_c_engine.cpp  sonare_c_features.cpp  sonare_c_features.h  sonare_c_internal.cpp  sonare_c_internal.h  sonare_c_mastering.cpp  sonare_c_mastering.h  sonare_c_mastering_apply.cpp  sonare_c_mastering_chain.cpp  sonare_c_mastering_dynamics.cpp  sonare_c_mastering_eq.cpp  sonare_c_mastering_helpers.h  sonare_c_mastering_preset.cpp  sonare_c_mastering_repair.cpp  sonare_c_mastering_streaming.cpp  sonare_c_memory.cpp  sonare_c_metering.h  sonare_c_mixing.cpp  sonare_c_mixing.h  sonare_c_project.cpp  sonare_c_project.h  sonare_c_streaming.h  sonare_c_types.h  sonare_c_voice_changer.cpp
src/acoustic/: geometry.h  image_source.cpp  image_source.h  late_reverb.cpp  late_reverb.h  material.cpp  material.h  rir_synthesizer.cpp  rir_synthesizer.h  room_model.cpp  room_model.h  room_types.cpp  room_types.h
src/analysis/: acoustic_analyzer.cpp  acoustic_analyzer.h  analysis_json.cpp  analysis_json.h  beat_analyzer.cpp  beat_analyzer.h  boundary_detector.cpp  boundary_detector.h  bpm_analyzer.cpp  bpm_analyzer.h  chord_analyzer.cpp  chord_analyzer.h  chord_hmm.cpp  chord_hmm.h  chord_templates.cpp  chord_templates.h  downbeat_analyzer.cpp  downbeat_analyzer.h  dynamics_analyzer.cpp  dynamics_analyzer.h  key_analyzer.cpp  key_analyzer.h  key_profiles.cpp  key_profiles.h  melody_analyzer.cpp  melody_analyzer.h  meter_analyzer.cpp  meter_analyzer.h  music_analyzer.cpp  music_analyzer.h  onset_analyzer.cpp  onset_analyzer.h  progression_patterns.cpp  progression_patterns.h  rhythm_analyzer.cpp  rhythm_analyzer.h  room_estimator.cpp  room_estimator.h  section_analyzer.cpp  section_analyzer.h  (+2 more)
src/arrangement/: edit_command.cpp  edit_command.h  edit_compiler.cpp  edit_compiler.h  edit_history.cpp  edit_history.h  edit_model.cpp  edit_model.h  edit_source.h  harmonic_timeline.h  project_view.h
src/automation/: automation_engine.cpp  automation_engine.h  automation_lane.cpp  automation_lane.h  parameter.cpp  parameter.h
src/c_api/: core_analysis.cpp  core_audio.cpp  core_common.cpp  core_cqt.cpp  core_internal.h  core_quick.cpp  eq_band_json.cpp  eq_band_json.h  features_common.cpp  features_internal.h  features_inverse.cpp  features_music.cpp  features_spectral_pitch.cpp  features_spectrogram_mel.cpp  features_streaming.cpp  midi_fx_json.h  mixing_graph.cpp  mixing_internal.h  mixing_mixer.cpp  mixing_strip.cpp  project_bounce.cpp  project_core.cpp  project_edit.cpp  project_internal.h  project_midi.cpp  project_mir.cpp  project_soundfont.cpp  sonare_c.cpp  sonare_c_acoustic.cpp  sonare_c_compat.cpp  sonare_c_daw.cpp  sonare_c_editing.cpp  sonare_c_effects.cpp  sonare_c_engine.cpp  sonare_c_features.cpp  sonare_c_internal.cpp  sonare_c_internal.h  sonare_c_mastering_apply.cpp  sonare_c_mastering_chain.cpp  sonare_c_mastering_dynamics.cpp  (+9 more)
src/core/: audio.cpp  audio.h  audio_io.cpp  audio_io.h  audio_io_ffmpeg.cpp  audio_io_ffmpeg.h  audio_ops.cpp  audio_ops.h  channel_layout.h  convert.cpp  convert.h  db_convert.cpp  db_convert.h  diagnostic.h  fft.cpp  fft.h  harmonic.cpp  harmonic.h  iirt.cpp  iirt.h  pcen.cpp  pcen.h  resample.cpp  resample.h  spectrum.cpp  spectrum.h  synthesis.cpp  synthesis.h  weighting.cpp  weighting.h  window.cpp  window.h
src/effects/: decompose.cpp  decompose.h  hpss.cpp  hpss.h  native_spectral_stretch.cpp  native_spectral_stretch.h  normalize.cpp  normalize.h  phase_vocoder.cpp  phase_vocoder.h  pitch_shift.cpp  pitch_shift.h  preemphasis.cpp  preemphasis.h  remix.cpp  remix.h  silence.cpp  silence.h  spectral_edit.cpp  spectral_edit.h  time_stretch.cpp  time_stretch.h  tts.cpp  tts.h
src/engine/: boundary_splitter.cpp  boundary_splitter.h  capture.cpp  capture.h  channel_delay.h  clip_player.cpp  clip_player.h  engine_controller.cpp  engine_controller.h  graph_runtime.cpp  graph_runtime.h  instrument_rack.h  meter_telemetry.cpp  meter_telemetry.h  metronome.cpp  metronome.h  mixing_runtime.cpp  mixing_runtime.h  monitor_runtime.cpp  monitor_runtime.h  realtime_engine.cpp  realtime_engine.h  scope_telemetry.cpp  scope_telemetry.h  telemetry.h  tempo_sync.cpp  tempo_sync.h  track_mixer.cpp  track_mixer.h
src/feature/: chroma.cpp  chroma.h  cqt.cpp  cqt.h  inverse.cpp  inverse.h  mel_spectrogram.cpp  mel_spectrogram.h  nnls_chroma.cpp  nnls_chroma.h  onset.cpp  onset.h  pitch.cpp  pitch.h  rhythm.cpp  rhythm.h  segment.cpp  segment.h  spectral.cpp  spectral.h  tonnetz.cpp  tonnetz.h  vqt.cpp  vqt.h
src/filters/: chroma.cpp  chroma.h  dct.cpp  dct.h  iir.cpp  iir.h  mel.cpp  mel.h  wavelet.cpp  wavelet.h
src/graph/: connection.h  graph.cpp  graph.h  node.cpp  node.h
src/host/: audio_device.h  midi_io.h  plugin_host.h
src/mastering/: master.h
src/metering/: basic.cpp  basic.h  clipping.cpp  clipping.h  decimation.h  dynamic_range.cpp  dynamic_range.h  frequency_bins.h  lufs.cpp  (+14 more)
tests/: CMakeLists.txt  test_main.cpp
tools/: CMakeLists.txt  cli_support.cpp  cli_support.h  gen-typescript-types.ts  mastering_generate_listening_corpus.py  sonare_cli.cpp
(+1241 files in other folders)
