[project]
name = "libsonare-benchmarks"
version = "0.0.0"
description = "Reproducible benchmarks comparing libsonare vs librosa."
requires-python = ">=3.11"
dependencies = [
  "libsonare",
  "librosa==0.11.0",
  "numpy>=2.0",
  "scipy>=1.14",
  "soundfile>=0.12",
]

[tool.rye]
managed = true
virtual = true
